Camera Rotation First Pass
Overhauled the camera rotation script and made some clean up changes to the planet generation.

--- a/TheFabricOfSpace/Assembly-CSharp.csproj
+++ b/TheFabricOfSpace/Assembly-CSharp.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Assets\Scripts\GridManager.cs" />
     <Compile Include="Assets\Scripts\Sheep.cs" />
     <Compile Include="Assets\Scripts\Planet_Generation.cs" />
-    <Compile Include="Assets\Camera_Rotation.cs" />
+    <Compile Include="Assets\Scripts\Camera_Rotation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
