--- a/TheFabricOfSpace/Assembly-CSharp.csproj
+++ b/TheFabricOfSpace/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\GeneralBasics2d.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\TestingUnitTests.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\PathBezier2d.cs" />
+    <Compile Include="Assets\Scripts\Singleton.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\PathSpline2d.cs" />
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\GeneralCameraShake.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\Scripts\Planet_Generation.cs" />
     <Compile Include="Assets\Scripts\Camera_Rotation.cs" />
+    <Compile Include="Assets\Scripts\MenuController.cs" />
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Framework\LeanTweenExt.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Framework\LTDescrOptional.cs" />
@@ -134,8 +136,7 @@
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Framework\LTDescr.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
-    <Compile Include="Assets\Scripts\Singleton.cs" />
-    <Compile Include="Assets\Scripts\MenuController.cs" />
+    <Compile Include="Assets\Scripts\ButtonContoller.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro.cginc" />
