--- a/TheFabricOfSpace/Assembly-CSharp.csproj
+++ b/TheFabricOfSpace/Assembly-CSharp.csproj
@@ -87,9 +87,11 @@
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Archived\TestingPunch.cs" />
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
+    <Compile Include="Assets\Scripts\BlitMaterialFeature.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Framework\LeanAudio.cs" />
     <Compile Include="Assets\Scripts\Geyser.cs" />
     <Compile Include="Assets\Scripts\PointerData.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
     <Compile Include="Assets\Scripts\Transition.cs" />
@@ -138,11 +140,11 @@
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Framework\LTDescr.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+     <None Include="Assets\EdgeDetectionOutlinesInclude.hlsl" />
      <None Include="Assets\UnityPackages\LeanTween\ReadMe.txt" />
      <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
