--- a/TheFabricOfSpace/Assembly-CSharp.csproj
+++ b/TheFabricOfSpace/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{8C86636C-7665-829C-94F4-8888E3592D02}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -56,6 +57,7 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Sheep\SheepController.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\LogoCinematic.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\GeneralBasics2d.cs" />
     <Compile Include="Assets\UnityPackages\LeanTween\Examples\Scripts\TestingUnitTests.cs" />
@@ -148,33 +150,33 @@
     <Compile Include="Assets\Scripts\GUI\PopUp_Manager.cs" />
   </ItemGroup>
   <ItemGroup>
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro.cginc" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
-     <None Include="Assets\UnityPackages\LeanTween\ReadMe.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-     <None Include="Assets\UnityPackages\LeanTween\License.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-     <None Include="Assets\UnityPackages\LeanTween\Examples\Archived\2dUnlitWithFade.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Sprite.shader" />
-     <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Bangers - OFL.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\UnityPackages\LeanTween\ReadMe.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\UnityPackages\LeanTween\License.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\UnityPackages\LeanTween\Examples\Archived\2dUnlitWithFade.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Shaders\TMP_Sprite.shader" />
+    <None Include="Assets\UnityPackages\TextMesh Pro\Examples &amp; Extras\Fonts\Bangers - OFL.txt" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.1.10f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
